minor alignment fix

--- a/2-front-end_uzduotis/css/styles.css
+++ b/2-front-end_uzduotis/css/styles.css
@@ -79,17 +79,18 @@ p {
     }
 
     .content>.navi>.nav-items>.button {
-        margin: 4px 4px 0px 0px;
+        margin: 4px 4px 0px 4px;
         border-radius: 8px;
         background-color: rgba(168, 80, 22, 0.973);
         padding: 8px;
         transition: 0.6s;
         color: grey;
+        display: flex;
+        justify-content: center;
     }
 
     .content>.navi>.nav-items>.button:first-child {
         margin-left: 4px;
-        margin-top: 0px;
     }
 
 }
